Finalized creation of Encounter, EncounterTest, and SampleEncounters